Configured VM name for single setup

--- a/flink-vm/single/Vagrantfile
+++ b/flink-vm/single/Vagrantfile
@@ -10,6 +10,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.provider "virtualbox" do |v|
     v.memory = 4096
     v.cpus   = 4
+    v.name   = 'FLINKsingle'
   end
   
   config.vm.provision "ansible" do |ansible|
